ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 9.0.0-rc1
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Integration
    • Fully Compatible
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Running the with_mongot_extension_* suites (SERVER-130648), any test that uses the extension-provided $vectorSearch inside a $lookup or $graphLookup subpipeline hits MONGO_UNREACHABLE_TASSERT(12197200) in DocumentSourceExtensionOptimizable::getFirstStageViewApplicationPolicy() (src/mongo/db/extension/host/document_source_extension_optimizable.h). The comment there states view resolution should happen after desugaring, so the method should be unreachable -- but the $lookup subpipeline path reaches it. Because it is a tripwire assertion, mongod then fassert-crashes at shutdown (exit code 14), failing fixture teardown for the whole job.

      Affected tests are excluded in buildscripts/resmokeconfig/matrix_suites/overrides/with_mongot_extension.yml; grep this ticket number to find them.

      Repro: buildscripts/resmoke.py run --suites=with_mongot_extension_single_node --force-excluded-tests jstests/with_mongot/e2e/vector_search/lookup_vector_search.js

      The tassert was introduced in SERVER-125517.

            Assignee:
            Mariano Shaar
            Reporter:
            Will Buerger
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: