SERVER-130913 Fix extension vectorSearch lookup subpipeline desugaring (#58120)

GitOrigin-RevId: 26045597c0a7430baa5ebd06d7e0057bf2780c30